# DashBoard_Viagens_PortalTransparencia

./: .gitignore  README.md  makefile  pyproject.toml
StreamlitApp/: main.py  streamlit_app.spec  tempCodeRunnerFile.py  visualizar_dados.py
StreamlitApp/libs/: main_page.py
StreamlitApp/libs/ip/: local_ip.py
StreamlitApp/libs/portal_transparencia/: tempCodeRunnerFile.py  viagens.py
StreamlitApp/libs/portal_transparencia/utils/: files.py
StreamlitApp/libs/qr_code/: qr_code_generator.py
StreamlitApp/libs/st_components/: sidebar.py
