[tool.poetry]
name = "StreamlitApp"
version = "0.1.0"
description = ""
authors = ["bruno <b_linhares@outlook.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "^1.35.0"
pyinstaller = "^6.7.0"
pillow = "^10.3.0"
qrcode = {extras = ["pil"], version = "^7.4.2"}
pygwalker = "^0.4.8.9"
plotly = "^5.22.0"
scipy = "^1.13.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
